выполнение и отмена заданий
